--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,15 +3,16 @@ set(GAMELIB "ASGEGameLib")
 
 ## glob is useful but not reliant in compilation so just use it for headers ##
 file(GLOB_RECURSE HEADER_LIST
-     LIST_DIRECTORIES FALSE
-     CONFIGURE_DEPENDS
-     ${CMAKE_SOURCE_DIR}/include/ASGEGameLib/*.hpp
-     ${CMAKE_SOURCE_DIR}/include/ASGEGameLib/*.h
-     *.hpp *.h)
+        LIST_DIRECTORIES FALSE
+        CONFIGURE_DEPENDS
+        ${CMAKE_SOURCE_DIR}/include/ASGEGameLib/*.hpp
+        ${CMAKE_SOURCE_DIR}/include/ASGEGameLib/*.h
+        *.hpp *.h)
 
 ## cpp files go here, [h]pp files are globbed so don't need to be explicitly added ##
 set(GAMELIB_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR} Scene.cpp Sprite.cpp AnimatedSprite.cpp Text.cpp ScalableSprite.cpp UIButton.cpp)
+        ${CMAKE_CURRENT_SOURCE_DIR} Scene.cpp Sprite.cpp AnimatedSprite.cpp Text.cpp ScalableSprite.cpp UIButton.cpp
+        TestScene.cpp FontManager.cpp)
 
 ## create the game library
 add_library(${GAMELIB} STATIC ${GAMELIB_SOURCES} "${HEADER_LIST}")
