Controller Visualiser implemented in title screen

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ set(GAMELIB_SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR} Scene.cpp Sprite.cpp AnimatedSprite.cpp Text.cpp ScalableSprite.cpp UIButton.cpp
         TestScene.cpp FontManager.cpp LevelEditor.cpp Tile.cpp TileMap.cpp EditorTileSet.cpp TitleScene.cpp GameScene.cpp
         Cursor.cpp ControllerTracker.cpp Sound.cpp Player.cpp KeyboardTracker.cpp MouseTracker.cpp InputTracker.cpp
-        OptionsScene.cpp Weapon.cpp LineTrace.cpp)
+        OptionsScene.cpp Weapon.cpp LineTrace.cpp ControllerDisplay.cpp)
 
 ## create the game library
 add_library(${GAMELIB} STATIC ${GAMELIB_SOURCES} "${HEADER_LIST}")
