Bullets now stop on players, kinda, still needs some tweaking

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB_RECURSE HEADER_LIST
 ## source files get listed here ##
 set(GAME_SOURCES
         ASGEGame/main.cpp
-        ASGEGame/ASGEGame.cpp ../src/PlayerHealth.cpp ../include/ASGEGameLib/GameObjects/Player/HUD/PlayerHealth.hpp)
+        ASGEGame/ASGEGame.cpp ../src/PlayerHealth.cpp ../include/ASGEGameLib/GameObjects/Player/HUD/PlayerHealth.hpp ../include/ASGEGameLib/GameObjects/Player/Weapons/AssaultRifle.cpp ../include/ASGEGameLib/GameObjects/Player/Weapons/AssaultRifle.h)
 
 ## the ASGE Game, which spawns the Game window ##
 add_executable(${GAME} ${HEADER_LIST} ${GAME_SOURCES})
