Score Board and Nemesis System
Press select to see your the Score Board.

This scoreboard will track your:
Kills, Deaths, Hits, Misses, Accuracy, and your current Nemesis (whoever has killed you the most)

Still want to introduce 'Favourite Weapon'

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ set(GAMELIB_SOURCES
         TestScene.cpp FontManager.cpp LevelEditor.cpp Tile.cpp TileMap.cpp EditorTileSet.cpp TitleScene.cpp GameScene.cpp
         Cursor.cpp ControllerTracker.cpp Sound.cpp Player.cpp KeyboardTracker.cpp MouseTracker.cpp InputTracker.cpp
         OptionsScene.cpp Weapon.cpp LineTrace.cpp ControllerDisplay.cpp LevelSelector.cpp CreditsScene.cpp PlayerHealth.cpp
-        PlayerHUD.cpp PlayerAmmo.cpp Crosshair.cpp WeaponData.cpp PlayerLives.cpp WeaponDrop.cpp)
+        PlayerHUD.cpp PlayerAmmo.cpp Crosshair.cpp WeaponData.cpp PlayerLives.cpp WeaponDrop.cpp PlayerAbilities.cpp PlayerScore.cpp)
 
 ## create the game library
 add_library(${GAMELIB} STATIC ${GAMELIB_SOURCES} "${HEADER_LIST}")
